@@ -5,7 +5,7 @@ namespace MyTester\ResultsFormatters;
 
 use MyTester\Attributes\TestSuite;
 use MyTester\DummyEventDispatcher;
-use MyTester\Events\TestCaseFinished;
+use MyTester\Events\TestSuiteFinished;
 use MyTester\Events\TestsFinished;
 use MyTester\Events\TestsStarted;
 use MyTester\TestCase;
@@ -25,15 +25,15 @@ final class JUnitTest extends TestCase
         $testCase1 = new TestCaseOne();
         $testCase1->setEventDispatcher(new DummyEventDispatcher());
         $testCase1->run();
-        $outputFormatter->reportTestCaseFinished(new TestCaseFinished($testCase1));
+        $outputFormatter->reportTestCaseFinished(new TestSuiteFinished($testCase1));
         $testCase2 = new TestCaseTwo();
         $testCase2->setEventDispatcher(new DummyEventDispatcher());
         $testCase2->run();
-        $outputFormatter->reportTestCaseFinished(new TestCaseFinished($testCase2));
+        $outputFormatter->reportTestCaseFinished(new TestSuiteFinished($testCase2));
         $testCase3 = new TestCaseThree();
         $testCase3->setEventDispatcher(new DummyEventDispatcher());
         $testCase3->run();
-        $outputFormatter->reportTestCaseFinished(new TestCaseFinished($testCase3));
+        $outputFormatter->reportTestCaseFinished(new TestSuiteFinished($testCase3));
         $outputFormatter->reportTestsFinished(new TestsFinished([]));
         $result = $outputFormatter->render();
         $result = str_replace(__DIR__, "/var/project/tests/ResultsFormatters", $result);
